--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "payload generate:types"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.35.1",
+    "@payloadcms/next": "^3.35.1",
+    "@payloadcms/payload-cloud": "^3.35.1",
+    "@payloadcms/richtext-lexical": "^3.35.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.8.1",
     "lucide-react": "^0.503.0",
     "next": "15.2.4",
+    "payload": "^3.35.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
